--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -247,6 +247,7 @@ MSG_CUENTA_GUARDADA_OK:La cuenta se guardó con exito
 ## Solicitud de servicio
 ERR_LENGHT:El campo {1} debe tener {2} dígitos.
 ERR_NSS_LONG:El Nº de solicitud debe tener menos de 10 dígitos.
+ERR_NNS_RANGO: El número de SS no corresponde con el grupo de SS seleccionado.
 ERR_FIDELIZACION:La cantidad de Crédito de Fidelización a utilizar no puede exceder el máximo disponible.
 ERR_PATACONEX:La cantidad de Pataconex ingresada excede el Precio de Venta Total.
 ERR_FALTA_ALQUILER:El ítem {1} debe tener un servicio adicional de tipo Alquiler Única Vez seleccionado.
@@ -256,9 +257,12 @@ ERR_REQUIRED_SELECTION:Debe seleccionar una de las opciones.
 ERR_REQUIRED_LINEA:La Solicitud de Servicio debe tener al menos una línea.
 ERR_NUMERO_NO_DISPONIBLE:El número de línea no se encuentra disponible.
 ERR_NUMERO_RESERVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
-ERR_FALTA_CARGO_ACTIVACION_CDW: El ítem {1} debe tener al menos un servicio adicional de tipo Cargo Activación CDW seleccionado. 
+ERR_FALTA_CARGO_ACTIVACION_CDW: El ítem {1} debe tener al menos un servicio adicional de tipo Cargo Activación CDW seleccionado.
 MSG_NUMERO_RESERVADO:El número de línea quedó reservado.<br>Para modificar alguno de los campos grisados, debe liberar la reserva de número realizada.
 MSG_SOLICITUD_GUARDADA_OK:Se ha guardado la solicitud con éxito.
+
+## Operaciones en curso
+ERR_SIN_SS:"Esta operación no tiene una SS creada aún."
 
 ##MENSAJES GENERALES
 ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
