se agregaron datos para infocom

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -228,6 +228,15 @@ fecha_Modificacion:Fecha Modificación:
 infocom:Infocom
 notas:Notas
 cuentaCorriente:Cuenta Corriente
+numeroCuenta: Número Cuenta
+clase: Clase
+venc: Vencimiento
+descripcion: Descripción
+numeroComprobante: Número comprobante
+importe: Importe
+saldo: Saldo
+aVencer: A vencer
+vencida: Vencida
 
 ##MENSAJES ERROR EDICION CUENTA
 ERR_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio de facturación.
