acceso a cuenta desde oportunidades en curso

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -238,7 +238,7 @@ saldo: Saldo
 aVencer: A vencer
 vencida: Vencida
 
-##MENSAJES ERROR EDICION CUENTA
+##MENSAJES EDICION CUENTA
 ERR_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio de facturación.
 ERR_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio de entrega.
 ERR_DOMICILIO_PPAL_DUPLICADO:No se puede agregar un domicilio principal para la cuenta.
@@ -252,6 +252,9 @@ ERR_CREAR_SS_EDITOR_CUENTA_DIRTY:La cuenta tiene cambios sin guardar. Guarde o d
 ERR_NO_ACCESO_CUENTA:No tiene permiso para ver esa cuenta.
 ERR_NO_CUENTA_SELECTED:Debe seleccionar una Cuenta
 MSG_CUENTA_GUARDADA_OK:La cuenta se guardó con exito
+MSG_SELECCION_CUENTA:Por favor seleccione una cuenta.
+LBL_CAMBIAR_ESTADO:Cambiar Estado
+LBL_SELECCION_CUENTA:Selección de cuenta
 
 ## Solicitud de servicio
 ERR_LENGHT:El campo {1} debe tener {2} dígitos.
@@ -272,6 +275,8 @@ MSG_SOLICITUD_GUARDADA_OK:Se ha guardado la solicitud con éxito.
 
 ## Operaciones en curso
 ERR_SIN_SS:"Esta operación no tiene una SS creada aún."
+ALT_ABRIR_CUENTA_ASOC:Abrir cuenta asociada.
+ALT_ADD_PROSPECT:Agregar Prospect
 
 ##MENSAJES GENERALES
 ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
@@ -280,6 +285,7 @@ ERR_EMAIL_NO_VALIDO:El campo {1}: no tiene un email válido.
 ERR_FECHA_NO_VALIDA:El campo {1}: no tiene una fecha válida. Formato válido: "dd/mm/aaaa"
 ERR_DIA_HABIL:Debe ingresar un dia hábil
 MSG_DIALOG_TITLE:Mensaje
+ERR_DIALOG_TITLE:Error
 MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
 MSG_PREGUNTA_GUARDAR:¿Desea guardar los cambios?
 MSG_NO_HAY_DATOS_NUEVOS:No hay datos nuevos para guardar
