se modificaron algunos textos (para domicilio y scoring)

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -140,7 +140,7 @@ totales:Totales
 desvios:Desvíos:
 creditoFidel:Cred.Fidel.:
 precioVenta:Precio Venta:
-consultarScoringTitle:Consultar Scoring
+consultarScoringTitle:Scoring
 
 #Labels - SS - Agregar Item
 tipoOrden:Tipo Orden:
@@ -219,7 +219,7 @@ provincia:Provincia:
 facturacion:Facturación:
 entrega:Entrega:
 validado1:Validado por
-validado2:EECC/Agente:
+validado2:EECC/Agente
 obs_domicilio:Observaciones:
 usuario_domicilio:Usuario:
 fecha_Modificacion:Fecha Modificación:
