--- a/pom.xml
+++ b/pom.xml
@@ -162,9 +162,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
     <!--                    <scope>provided</scope>-->
     <!--            </dependency>   -->
     <dependency>
-      <groupId>org.dozer</groupId>
+      <groupId>net.sf.dozer</groupId>
       <artifactId>dozer</artifactId>
-      <version>5.0</version>
+      <version>5.1</version>
     </dependency>
     <!--  test -->
     <dependency>
