Cambio en Validado1 para tener el mensaje en un solo label

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -218,7 +218,7 @@ partido:Partido:
 provincia:Provincia:
 facturacion:Facturación:
 entrega:Entrega:
-validado1:Validado por
+validado1:Validado por EECC/Agente
 validado2:EECC/Agente
 obs_domicilio:Observaciones:
 usuario_domicilio:Usuario:
