apertura de oportunidad desde op. en curso

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -277,6 +277,7 @@ MSG_SOLICITUD_GUARDADA_OK:Se ha guardado la solicitud con éxito.
 ERR_SIN_SS:"Esta operación no tiene una SS creada aún."
 ALT_ABRIR_CUENTA_ASOC:Abrir cuenta asociada.
 ALT_ADD_PROSPECT:Agregar Prospect
+ALT_ABRIR_OPORTUNIDAD:Abrir oportunidad
 
 ##MENSAJES GENERALES
 ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
