--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -255,6 +255,7 @@ MSG_CUENTA_GUARDADA_OK:La cuenta se guardó con exito
 MSG_SELECCION_CUENTA:Por favor seleccione una cuenta.
 LBL_CAMBIAR_ESTADO:Cambiar Estado
 LBL_SELECCION_CUENTA:Selección de cuenta
+ERR_CUENTA_LOCKEADA_POR_OTRO: La cuenta se abrirá en modo consulta. <br/>\n La Cuenta {1} se encuentra lockeada por otro vendedor. <br/>\n El Supervisor responsable es {2}
 
 ## Solicitud de servicio
 ERR_LENGHT:El campo {1} debe tener {2} dígitos.
