--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -271,8 +271,10 @@ ERR_REQUIRED_LINEA:La Solicitud de Servicio debe tener al menos una línea.
 ERR_NUMERO_NO_DISPONIBLE:El número de línea no se encuentra disponible.
 ERR_NUMERO_RESERVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
 ERR_FALTA_CARGO_ACTIVACION_CDW: El ítem {1} debe tener al menos un servicio adicional de tipo Cargo Activación CDW seleccionado.
+ERR_NO_OPCION_SELECCIONADA:Por favor, seleccione una opción.
 MSG_NUMERO_RESERVADO:El número de línea quedó reservado.<br>Para modificar alguno de los campos grisados, debe liberar la reserva de número realizada.
 MSG_SOLICITUD_GUARDADA_OK:Se ha guardado la solicitud con éxito.
+
 
 ## Operaciones en curso
 ERR_SIN_SS:"Esta operación no tiene una SS creada aún."
