fix bug en validacion format CUIL/CUIT

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -256,6 +256,8 @@ MSG_SELECCION_CUENTA:Por favor seleccione una cuenta.
 LBL_CAMBIAR_ESTADO:Cambiar Estado
 LBL_SELECCION_CUENTA:Selección de cuenta
 ERR_CUENTA_LOCKEADA_POR_OTRO: La cuenta se abrirá en modo consulta. <br/>\n La Cuenta {1} se encuentra lockeada por otro vendedor. <br/>\n El Supervisor responsable es {2}
+ERR_FORMATO_CUIL:El formato del número de CUIT/CUIL es incorrecto. Debe ser xx-xxxxxxxx-x
+
 
 ## Solicitud de servicio
 ERR_LENGHT:El campo {1} debe tener {2} dígitos.
