+File not founr Error

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -295,5 +295,6 @@ ERR_DIALOG_TITLE:Error
 MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
 MSG_PREGUNTA_GUARDAR:¿Desea guardar los cambios?
 MSG_NO_HAY_DATOS_NUEVOS:No hay datos nuevos para guardar
+ERR_FILE_NOT_FOUND:Este archivo no se encuentra disponible.
 
 
