--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -275,6 +275,7 @@ ERR_CANT_UNO: El campo Cantidad debe ser 1 para una reserva de número.
 ERR_REQUIRED_SELECTION:Debe seleccionar una de las opciones.
 ERR_REQUIRED_LINEA:La Solicitud de Servicio debe tener al menos una línea.
 ERR_NUMERO_NO_DISPONIBLE:El número de línea no se encuentra disponible.
+ERR_NINGUN_NUMERO_DISPONIBLE:No hay números similares disponibles. Por favor, ingrese otra opción.
 ERR_NUMERO_RESERVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
 ERR_FALTA_CARGO_ACTIVACION_CDW: El ítem {1} debe tener al menos un servicio adicional de tipo Cargo Activación CDW seleccionado.
 ERR_NO_OPCION_SELECCIONADA:Por favor, seleccione una opción.
