rework pestaña contactos. Corregidos varios bugs al agregar contactos

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -261,6 +261,7 @@ ERR_FORMATO_CUIL:El formato del número de CUIT/CUIL es incorrecto. Debe ser xx-
 ERR_FECHA_NAC_MENOR_HOY:La fecha de nacimiento debe ser inferior a la de hoy.
 ERR_NUMERO_DE_TARJETA:El número de tarjeta debe tener {1} dígitos.
 ERR_NUMERO_CBU:El número CBU debe tener 22 dígitos.
+ERR_MAX_LARGO_CAMPO:Máxima longitud del campo alcanzada 
 
 
 ## Solicitud de servicio
