fix general validacion nr de documento agregar/buscar cuenta y crear contactos

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -258,6 +258,7 @@ LBL_CAMBIAR_ESTADO:Cambiar Estado
 LBL_SELECCION_CUENTA:Selección de cuenta
 ERR_CUENTA_LOCKEADA_POR_OTRO: La cuenta se abrirá en modo consulta. <br/>\n La Cuenta {1} se encuentra lockeada por otro vendedor. <br/>\n El Supervisor responsable es {2}
 ERR_FORMATO_CUIL:El formato del número de CUIT/CUIL es incorrecto. Debe ser xx-xxxxxxxx-x
+ERR_DATO_CUIL:El número de CUIT/CUIL no es válido.
 ERR_FECHA_NAC_MENOR_HOY:La fecha de nacimiento debe ser inferior a la de hoy.
 ERR_NUMERO_DE_TARJETA:El número de tarjeta debe tener {1} dígitos.
 ERR_NUMERO_CBU:El número CBU debe tener 22 dígitos.
