cambio texto validacion completitud domicilios

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -239,8 +239,8 @@ aVencer: A vencer
 vencida: Vencida
 
 ##MENSAJES EDICION CUENTA
-ERR_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio de facturación.
-ERR_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio de entrega.
+ERR_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de facturación.
+ERR_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio principal de entrega.
 ERR_DOMICILIO_PPAL_DUPLICADO:No se puede agregar un domicilio principal para la cuenta.
 ERR_TARJETA_NO_VALIDA:Tarjeta no válida: La tarjeta ingresada no es válida. (se)
 ERR_AL_VALIDAR_TARJETA:Hubo un error al validar tarjeta
