cambio titulos de popup a Aviso.

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -297,8 +297,8 @@ ERR_FORMULARIO_DIRTY:Hay cambios sin guardar: presione Aceptar para descartarlos
 ERR_EMAIL_NO_VALIDO:El campo {1}: no tiene un email válido.
 ERR_FECHA_NO_VALIDA:El campo {1}: no tiene una fecha válida. Formato válido: "dd/mm/aaaa"
 ERR_DIA_HABIL:Debe ingresar un dia hábil
-MSG_DIALOG_TITLE:Mensaje
-ERR_DIALOG_TITLE:Error
+MSG_DIALOG_TITLE:Aviso
+ERR_DIALOG_TITLE:Aviso
 MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
 MSG_PREGUNTA_GUARDAR:¿Desea guardar los cambios?
 MSG_NO_HAY_DATOS_NUEVOS:No hay datos nuevos para guardar
