opcion borrar operaciones en curso al cambiar estado oportunidad

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -290,6 +290,7 @@ ERR_SIN_SS:"Esta operación no tiene una SS creada aún."
 ALT_ABRIR_CUENTA_ASOC:Abrir cuenta asociada.
 ALT_ADD_PROSPECT:Agregar Prospect
 ALT_ABRIR_OPORTUNIDAD:Abrir oportunidad
+MSG_EXISTE_SS:"Existe una solicitud de servicio para la oportunidad. ¿Desea eliminarla?"
 
 ##MENSAJES GENERALES
 ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
