domicilios y contactos : edicion readOnly para cuentas lockeadas por otro usuario y buscadas por documento.

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -263,6 +263,8 @@ ERR_FECHA_NAC_MENOR_HOY:La fecha de nacimiento debe ser inferior a la de hoy.
 ERR_NUMERO_DE_TARJETA:El número de tarjeta debe tener {1} dígitos.
 ERR_NUMERO_CBU:El número CBU debe tener 22 dígitos.
 ERR_MAX_LARGO_CAMPO:Máxima longitud del campo alcanzada 
+ERR_NO_DELETE:No se permite borrar este elemento
+ERR_NO_COPY:No se permite copiar este elemento
 
 
 ## Solicitud de servicio
