validacion "no acceso" a creacion SS para cuentas no reponsable pago

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -251,6 +251,7 @@ ERR_FALTA_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de f
 ERR_CREAR_SS_EDITOR_CUENTA_DIRTY:La cuenta tiene cambios sin guardar. Guarde o descarte los cambios antes de crear una solicitud de servicio.
 ERR_NO_ACCESO_CUENTA:No tiene permiso para ver esa cuenta.
 ERR_NO_ACCESO_CREAR_SS:No tiene permisos para crear Solicitudes sobre esta cuenta.
+ERR_NO_ACCESO_NO_ES_RESP_PAGO:Acceso denegado. No puede operar con esta cuenta. <BR/>La Cuenta {1} asociada a la SS  no es responsable a pago.
 ERR_NO_CUENTA_SELECTED:Debe seleccionar una Cuenta
 MSG_CUENTA_GUARDADA_OK:La cuenta se guardó con exito
 MSG_SELECCION_CUENTA:Por favor seleccione una cuenta.
