problemas con constante pin

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -163,7 +163,7 @@ imei:<span class="req">IMEI:</span>
 sim:SIM:
 modeloEq:<span class="req">Modelo Eq.:</span>
 localidadReq:<span class="req">Localidad:</span>
-pin:<span class="req">Nº Pin:</span>
+nPinReq:<span class="req">Nº Pin:</span>
 serie:Nº Serie:
 nuevo:Nuevo
 verificarSim:Verificar SIM
@@ -269,6 +269,7 @@ ERR_NO_COPY:No se permite copiar este elemento
 
 
 ## Solicitud de servicio
+pinMaestro:PIN:
 ERR_LENGHT:El campo {1} debe tener {2} dígitos.
 ERR_NSS_LONG:El Nº de solicitud debe tener menos de 10 dígitos.
 ERR_NNS_RANGO: El número de SS no corresponde con el grupo de SS seleccionado.
@@ -284,6 +285,7 @@ ERR_NINGUN_NUMERO_DISPONIBLE:No hay números similares disponibles. Por favor, i
 ERR_NUMERO_RESERVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
 ERR_FALTA_CARGO_ACTIVACION_CDW: El ítem {1} debe tener al menos un servicio adicional de tipo Cargo Activación CDW seleccionado.
 ERR_NO_OPCION_SELECCIONADA:Por favor, seleccione una opción.
+ERR_URL_PARAMS_EMPTY:No ingreso la cuenta para la cual desea cargar la solicitud
 MSG_NUMERO_RESERVADO:El número de línea quedó reservado.<br>Para modificar alguno de los campos grisados, debe liberar la reserva de número realizada.
 MSG_SOLICITUD_GUARDADA_OK:Se ha guardado la solicitud con éxito.
 
