--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,15 @@
 			</execution>
 		</executions>
 	</plugin>
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.0.2</version>
+        <configuration>
+          <warSourceDirectory>war</warSourceDirectory>
+          <webXml>war/WEB-INF/web.xml</webXml>
+        </configuration>
+     </plugin>
       <!--  Use the dependency plugin to unpack gwt-dev-PLATFORM-libs.zip -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
