--- a/pom.xml
+++ b/pom.xml
@@ -356,21 +356,19 @@
           <configLocation>config/sun_checks.xml</configLocation>
         </configuration>
       </plugin>
+      
     </plugins>
   </reporting>
   <distributionManagement>
-    <snapshotRepository>
-      <id>server04</id>
-      <name>Snoop REPO Snapshots</name>
-      <url>
-      http://server04:8081/nexus/content/repositories/SnoopREPOSnap/</url>
-    </snapshotRepository>
-	<!-- TODO Definir a donde manda el site -->
-	<!--
-		<site>
-			<id>maven-websites</id> 
-			<url>scp://192.168.1.151/var/www/proyectos/nombreDelProyecto/</url>
-		</site>
-	-->	
-  </distributionManagement>
+		<repository>
+			<id>serverNextel</id>
+			<name>Snoop REPO Release</name>
+			<url>http://basliap12c.nextel.com.ar:8080/artifactory/NexusRelease</url>
+		</repository>
+		<snapshotRepository>
+			<id>serverNextel</id>
+			<name>Snoop REPO Snapshots</name>
+			<url>http://basliap12c.nextel.com.ar:8080/artifactory/NexusSnapshot</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
