--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -14,11 +13,24 @@
 	<description>
 		Sfa Nextel Revolution - POM multi-modules WEB
 	</description>
-	
+
 	<modules>
 		<module>../../sfa-srv</module>
 		<module>../../GwtCommons</module>
 		<module>../</module>
 		<module>ear</module>
 	</modules>
+
+	<distributionManagement>
+		<repository>
+			<id>serverNextel</id>
+			<name>Snoop REPO Release</name>
+			<url>http://basliap12c.nextel.com.ar:8080/artifactory/NexusRelease</url>
+		</repository>
+		<snapshotRepository>
+			<id>serverNextel</id>
+			<name>Snoop REPO Snapshots</name>
+			<url>http://basliap12c.nextel.com.ar:8080/artifactory/NexusSnapshot</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
