--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>ar.com.nextel.sfa</groupId>
       <artifactId>sfa-srv</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>2.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
@@ -244,6 +244,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-eclipse-plugin</artifactId>
         <configuration>
+          <outputDirectory>war/WEB-INF/classes</outputDirectory>
           <wtpversion>2.0</wtpversion>
         </configuration>
       </plugin>
