--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -276,6 +276,7 @@ ERR_NNS_RANGO: El número de SS no corresponde con el grupo de SS seleccionado.
 ERR_FIDELIZACION:La cantidad de Crédito de Fidelización a utilizar no puede exceder el máximo disponible.
 ERR_PATACONEX:La cantidad de Pataconex ingresada excede el Precio de Venta Total.
 ERR_FALTA_ALQUILER:El ítem {1} debe tener un servicio adicional de tipo Alquiler Única Vez seleccionado.
+ERR_FALTA_MDS:El ítem {1} debe tener un servicio MDS seleccionado.
 ERR_CANT_MA_CERO:El campo {1} debe ser mayor a 0 (cero).
 ERR_CANT_UNO: El campo Cantidad debe ser 1 para una reserva de número.
 ERR_REQUIRED_SELECTION:Debe seleccionar una de las opciones.
