Se agregó la solapa "Notas" a la información de las oportunidades.

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -112,6 +112,8 @@ hasta:Hasta:
 nroDocumento: Número Doc.
 nroCuenta: Número Cta.
 fecha: Fecha
+origen: Origen
+titulo: Titulo
 
 #Labels - Editor OportunidadesEnCurso
 numeroClienteCompleto: Número cliente
