Vendedores DAE para SS de tipo MDS

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -143,6 +143,7 @@ desvios:Desvíos:
 creditoFidel:Cred.Fidel.:
 precioVenta:Precio Venta:
 consultarScoringTitle:Scoring
+dae:DAE:
 
 #Labels - SS - Agregar Item
 tipoOrden:Tipo Orden:
