--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
     </dependency>
     <dependency>
       <groupId>ar.com.snoop.gwt</groupId>
-      <artifactId>GwtCommons-sfa</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <artifactId>GwtCommons</artifactId>
+      <version>1.1-sfa-SNAPSHOT</version>
     </dependency>
     <!--  Spring deps  -->
     <dependency>
@@ -92,7 +92,7 @@
     <dependency>
       <groupId>net.sf.dozer</groupId>
       <artifactId>dozer</artifactId>
-      <version>5.1</version>
+      <version>5.2.0</version>
       <scope>provided</scope>
     </dependency>
     <!--  test -->
