--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ar.com.nextel.sfa</groupId>
 	<artifactId>sfa-web</artifactId>
-	<version>web.2.0.0-SNAPSHOT</version>
+	<version>web_2.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>SFA WEB</name>
 	<description>SFA Revolution Web - IE support</description>
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>ar.com.nextel.sfa</groupId>
       <artifactId>sfa-srv</artifactId>
-      <version>web.2.0.0-SNAPSHOT</version>
+      <version>web_2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
