--- a/deploy/ear/pom.xml
+++ b/deploy/ear/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>sfa-web-ear</artifactId>
 	<name>sfa-web-ear</name>
 	<packaging>ear</packaging>
-	<version>web.2.0.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	
 	<parent>
 		<groupId>ar.com.nextel.parent</groupId>
