--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	
   <!--  convenience to define GWT version in one place -->
   <properties>
-    <gwtVersion>2.0.2</gwtVersion>
+    <gwtVersion>2.0.3</gwtVersion>
     <spring.version>2.5.6</spring.version>
   </properties>
   <dependencies>
@@ -31,7 +31,7 @@
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-servlet</artifactId>
       <version>${gwtVersion}</version>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
