ASIGNADA - # 651: Factura Electrónica http://bugtracker.nextel.com.ar/view.php?id=651

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -127,6 +127,7 @@ entregaReq:<span class="req">Entrega:</span>
 facturacionReq:<span class="req">Facturación:</span>
 aclaracion:Aclaración:
 emailReq:<span class="req">E-Mail:</span>
+email:E-Mail
 domicilioTitle:Domicilio
 pataconexTitle:Pataconex
 creditoFidelizacionTitle:Crédito de Fidelización
@@ -240,6 +241,9 @@ importe: Importe
 saldo: Saldo
 aVencer: A vencer
 vencida: Vencida
+
+#Factura Electrónica
+habilitar=Habilitar
 
 ##MENSAJES EDICION CUENTA
 ERR_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de facturación.
