--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ar.com.nextel.sfa</groupId>
 	<artifactId>sfa-web</artifactId>
-	<version>2.0.9-SNAPSHOT</version>
+	<version>2.0.9</version>
 	<packaging>war</packaging>
 	<name>SFA WEB</name>
 	<description>SFA Revolution Web - IE support</description>
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>ar.com.nextel.sfa</groupId>
       <artifactId>sfa-srv</artifactId>
-      <version>2.0.9-SNAPSHOT</version>
+      <version>2.0.9</version>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
