*** empty log message ***

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -72,6 +72,7 @@ interno: Interno
 emailPanelTitle:E-Mail
 personal:Personal
 laboral:Laboral
+facturaElectronica: Factura Electronica
 
 #Labels - Editor Cuenta - Forma de Pago
 formaDePagoPanelTitle:Forma de Pago
