factura electronica checkbox

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -245,6 +245,7 @@ vencida: Vencida
 
 #Factura Electrónica
 habilitar=Habilitar
+habilitarFacturaElectronica=Factura Electronica
 
 ##MENSAJES EDICION CUENTA
 ERR_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de facturación.
