--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -164,7 +164,7 @@ alias:Alias:
 ddn:DDN
 ddi:DDI
 roaming:Roaming
-imei:<span class="req">IMEI:</span>
+imeiReq:<span class="req">IMEI:</span>
 sim:SIM:
 modeloEq:<span class="req">Modelo Eq.:</span>
 localidadReq:<span class="req">Localidad:</span>
