--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -205,5 +205,12 @@
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
+	<resource-ref>
+		<description>Bps DS</description>
+		<res-ref-name>jdbc/bpsDS</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
 
 </web-app>
