--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -215,6 +215,13 @@
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
-
+<servlet>
+  <servlet-name>configurarSucursalRPCServiceImpl</servlet-name>
+  <servlet-class>ar.com.nextel.sfa.server.ConfigurarSucursalRPCServiceImpl</servlet-class>
+</servlet>
+<servlet-mapping>
+  <servlet-name>configurarSucursalRPCServiceImpl</servlet-name>
+  <url-pattern>/ar.com.nextel.sfa.SFAWeb/configurarsucursal.rpc</url-pattern>
+</servlet-mapping>
 
 </web-app>
