--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -230,4 +230,10 @@
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
+	<resource-ref>
+		<description>Shift DS</description>
+		<res-ref-name>jdbc/shiftDS</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
