--- a/deploy/ear/pom.xml
+++ b/deploy/ear/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>sfa-web-ear</artifactId>
 	<name>sfa-web-ear</name>
 	<packaging>ear</packaging>
-	<version>2.4.64.1.5</version>
+	<version>2.4.64.1.6-SNAPSHOT</version>
 	
 	
 	<parent>
