--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,30 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+	  <groupId>javax.xml.bind</groupId>
+	  <artifactId>jaxb-api</artifactId>
+	  <version>2.1</version>
+	  <scope>provided</scope>
+	</dependency>
+	<dependency>
+	  <groupId>javax.xml.ws</groupId>
+	  <artifactId>jaxws-api</artifactId>
+	  <version>2.1</version>
+	  <scope>provided</scope>
+	</dependency>
+	<dependency>
+	  <groupId>com.sun.xml.ws</groupId>
+	  <artifactId>jaxws-rt</artifactId>
+	  <version>2.1.3</version>
+	  <scope>provided</scope>
+	</dependency>
+	<dependency>
+	  <groupId>com.sun.xml.bind</groupId>
+	  <artifactId>jaxb-impl</artifactId>
+	  <version>2.1.7</version>
+	  <scope>provided</scope>
+	</dependency>
+    <dependency>
       <groupId>org.openqa.selenium.client-drivers</groupId>
       <artifactId>selenium-java-client-driver</artifactId>
       <version>1.0-beta-1</version>
