cambios en sfa para permanencia (cmartinez)

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -320,4 +320,13 @@ MSG_PREGUNTA_GUARDAR:¿Desea guardar los cambios?
 MSG_NO_HAY_DATOS_NUEVOS:No hay datos nuevos para guardar
 ERR_FILE_NOT_FOUND:Este archivo no se encuentra disponible.
 
+#Label Popup Permanencia:
+cargosPermanencia:Cargos de Permanencia
+infoContrato: Contrato Número: {1} \n Monto a Cobrar: ${2}
 
+
+##########################################################################################
+## 									DESACTUALIZADO										 #	 
+## El archivo SfaStatic.properties no corresponde con el SfaStatic.java actual.          #
+## Los mensajes se agregaron directamente en el archivo SfaStatic.java.					 #
+##########################################################################################
