sfa-web2\src\main\java\ar\com\nextel\sfa\client\constant\SfaStatic.java sfa-web2\src\main\java\ar\com\nextel\sfa\client\constant\SfaStatic.properties

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -44,7 +44,7 @@ telefonos:Teléfonos
 sexo:Sexo
 fechaNacimiento:F. Nac.
 contribuyente:Contribuy.
-provedorAnterior:Prov. Ant.
+provedorAnterior:Provee. Ant.
 rubro:Rubro
 claseCliente:Clase Cli.
 categoria:Categoría
