cambios para permanencia en sfa (cmartinez)

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -322,7 +322,7 @@ ERR_FILE_NOT_FOUND:Este archivo no se encuentra disponible.
 
 #Label Popup Permanencia:
 cargosPermanencia:Cargos de Permanencia
-infoContrato: Contrato Número: {1} \n Monto a Cobrar: ${2}
+infoContrato: Contrato Número: {1} \n Monto a Cobrar: ${2} \n Cantidad de meses restantes: {3} Meses
 
 
 ##########################################################################################
