--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -128,6 +128,14 @@
 			ar.com.nextel.sfa.server.OportunidadNegocioRpcServiceImpl</servlet-class>
 	</servlet>
 	<servlet>
+  		<servlet-name>configurarSucursalRPCServiceImpl</servlet-name>
+  		<servlet-class>ar.com.nextel.sfa.server.ConfigurarSucursalRPCServiceImpl</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>stockRpcServiceImpl</servlet-name>
+		<servlet-class>ar.com.nextel.sfa.server.StockRpcServiceImpl</servlet-class>
+	</servlet>
+	<servlet>
 		<servlet-name>UserCenterRpcService</servlet-name>
 		<servlet-class>
 			ar.com.nextel.sfa.server.UserCenterRpcServiceImpl</servlet-class>
@@ -158,6 +166,14 @@
 		<url-pattern>/ar.com.nextel.sfa.SFAWeb/oportunidades.rpc</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
+  		<servlet-name>configurarSucursalRPCServiceImpl</servlet-name>
+  		<url-pattern>/ar.com.nextel.sfa.SFAWeb/configurarsucursal.rpc</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>stockRpcServiceImpl</servlet-name>
+		<url-pattern>/ar.com.nextel.sfa.SFAWeb/stock.rpc</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>UserCenterRpcService</servlet-name>
 		<url-pattern>/ar.com.nextel.sfa.SFAWeb/usercenter.rpc</url-pattern>
 	</servlet-mapping>
@@ -177,7 +193,6 @@
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
-
 
 	<resource-ref>
 		<description>SFA DS</description>
@@ -221,5 +236,4 @@
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
-
 </web-app>
